@@ -32,6 +32,10 @@ Core and Builtins
 - Issue #7084: Fix a (very unlikely) crash when printing a list from one
   thread, and mutating it from another one.  Patch by Scott Dial.
 
+- Issue #1747858: Fix lchown & fchown to work with large uid's and gid's on
+  64-bit platforms.
+
+
 Library
 -------
 
